    build-dep is no longer needed and these are both Build-Essential
  * Mini-policy for settings in smb.conf:
    - don't explicitly set settings to their default value
    - commented settings with the default value are commented with "#"
    - commented settings with a non-default value are commented with ";"
  * Apply this policy to "socket options". Closes: #476104

 -- Christian Perrier <bubulle@debian.org>  Wed, 16 Apr 2008 23:14:46 +0200

samba (1:3.0.28a-2) unstable; urgency=low

  [ Peter Eisentraut ]
  * Removed myself from Uploaders

  [ Steve Langasek ]
  * debian/patches/manpage-encoding.patch: fix up the manpage synopses to
    not use embedded iso8859-1 non-break spaces, there is a roff escape
    sequence that we should use instead.  Closes: #470844.

  [ Christian Perrier ]
  * Reupload with an epoch to supersede an accidental upload of 3.2.0
    in unstable

 -- Christian Perrier <bubulle@debian.org>  Sat, 05 Apr 2008 11:59:23 +0200

samba (3.0.28a-1) unstable; urgency=low

  [ Christian Perrier ]
  * New upstream release. This fixes the following Debian bugs:
    - Prevent nmbd from shutting down when no network
      interfaces can be located. Closes: #433449
  * Debian patches dropped as applied upstream:
    - make-distclean.patch
    - linux-cifs-user-perms.patch
    - cifs-umount-same-user.patch
    - get_global_sam_sid-non-root.patch
    - chgpasswd.patch
    - cups.patch
  * Fix doc-base section from Apps/Net to Network
  * Fix copyright in debian/copyright
  * Updated Standards-Version to 3.7.3 (no changes needed)
  * [Lintian] No longer use -1 revision for the libacl-dev build
    dependency

  [ Steve Langasek ]
  * Merge smb.conf changes from Ubuntu:
    - correct an inconsistency inthe winbind enum comment
    - correct default and example settings to use the canonical names for all
      options, rather than historical synonyms
    - clarify the comment for 'max log size'.
    Thanks to Chuck Short and Richard Laager.